--- a/weewnew/weew/services.html
+++ b/weewnew/weew/services.html
@@ -23,7 +23,7 @@
   <link href="../assets/vendor/venobox/venobox.css" rel="stylesheet">
   <link href="../assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
   <link href="../assets/vendor/aos/aos.css" rel="stylesheet">
-
+<link rel="stylesheet" href="./nav.css">
   <!-- Template Main CSS File -->
   <link href="../assets/css/style.css" rel="stylesheet">
   <link href="//db.onlinewebfonts.com/c/0b51833ff62e4af8acb5fd3e2bf59e97?family=SF+Pro+Display" rel="stylesheet" type="text/css"/>
@@ -80,24 +80,76 @@
 
 <body>
 
-  <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top ">
-    <div class="container">
-      <nav class="nav-menu   d-none d-lg-block">
-        <ul class="nav justify-content-center">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About Us</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="team.html">Team</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          </li>
-          <li><a href="contact.html"><button class="button__login">Contact Us</button></a></li>
-        </ul>
-      </nav><!-- .nav-menu -->
+  <!--navigation bar -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand d-block d-md-none" href="#"><img src="./images/logo.png" style="height:70px;width:120px" alt="" /> </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav w-100 justify-content-center">
+      <li class="nav-item active d-none d-md-block">
+        <a href="./home.html"><img src="./images/logo.png" style="height:60px;width:110px ;margin-top:4px" alt="" /> </a>    
+      </li>
+      <li class="nav-item d-flex d-block d-md-none">
+        <img src="./images/aboutusfive.png" alt="" style="height:90px;width:120px;border-radius:5%" class="px-3 mx-2">
+        <div class="text px-5">
+          <p>Name</p>
+          <button class="menu__button">Login</button>
+        </div>
+      </li>
+      <li class="nav-item d-block d-md-none py-3 mx-4"><h4>Take Me To</h4></li>
+      <li class="nav-item py-md-2">
+        <a class="nav-link " href="./home.html"><img src="./images/iconHome.png"  class="d-none d-md-block"alt="" style="height:22px;width:22px;"> <p class="d-block d-md-none">Home</p><span class="sr-only">(current)</span>
+        </a>
+      </li>
+      <li class="nav-item py-md-2">
+        <a class="nav-link" href="./Aboutus.html"><p>About Us</p></a>
+      </li>
+      <li class="nav-item py-md-2">
+        <a class="nav-link" href="./services.html"><p>Services</p></a>
+      </li>
+         <li class="nav-item py-md-2">
+        <a class="nav-link" href="./news.html"><p>News</p></a>
+      </li>
+          <li class="nav-item py-md-2">
+        <a class="nav-link" href="./diyportal.html"><p>DIY Portal</p></a>
+      </li>
+          <li class="nav-item py-md-2">
+        <a class="nav-link" href="./education.html"><p>Education</p></a>
+      </li>
+      <li class="nav-item py-md-2">
+       <a class="nav-link" href="./blog.html"><p>Blogs</p></a>
+      </li>
+           <li class="nav-item py-md-2">
+       <a class="nav-link" href="./faq.html"><p>FAQ'S</p></a>
+      </li>
+           <li class="nav-item py-md-2">
+       <a class="nav-link" href="./contactus.html"><p>Contact Us</p></a>
+      </li>
+           <li class="nav-item py-md-2 d-none d-md-block">
+       <a class="nav-link" href="#"><button class="menu__button">Login</button></a>
+      </li>
+      <li class="nav-item d-flex d-block d-md-none">
+        <img src="" alt="" class="mt-5" style="height:120px; width:120px; border-radius:50%;background:black; ">
+        <div class="px-2">
+          <p>Performance</p>
+          <small>76%</small>
+          <p>Task Completed</p>
+          <small>5</small>
+          <p>Score</p>
+          <small>751</small>
+                  </div>
+      </li>
+    </ul>
 
-    </div>
-  </header><!-- End Header -->
+  </div>
+
+
+</div>
+  </div></div></div>
+</nav>
+<!--navigation ends here-->
 
   <main id="main">
   <div class="container-fluid">
