--- a/weewnew/weew/news.html
+++ b/weewnew/weew/news.html
@@ -14,6 +14,7 @@
   <link href="../assets/vendor/venobox/venobox.css" rel="stylesheet">
   <link href="../assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
   <link href="../assets/vendor/aos/aos.css" rel="stylesheet">
+  <link rel="stylesheet" href="./nav.css">
   <style>
     
   .base{
@@ -167,12 +168,20 @@
       margin-top:5%;
     }
   }
+  @media (min-width: 1300px){
+    .b h3{
+      top:-16%;
+    }
+  }
   @media (min-width: 1900px) and (max-width: 2000px){
 .base{
-  width:60vw;
+  width:50vw;
 }
 .newsglobal{
   margin-top: 19%
+}
+.b h3{
+  top:-16%;
 }
   }
   </style>
@@ -180,6 +189,77 @@
 </head>
 <body>
 <main>
+  <div class="container-fluid mb-3">
+      <!--navigation bar -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand d-block d-md-none" href="#"><img src="./images/logo.png" style="height:70px;width:120px" alt="" /> </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav w-100 justify-content-center">
+      <li class="nav-item active d-none d-md-block">
+        <a href="./home.html"><img src="./images/logo.png" style="height:60px;width:110px ;margin-top:4px" alt="" /> </a>    
+      </li>
+      <li class="nav-item d-flex d-block d-md-none">
+        <img src="./images/aboutusfive.png" alt="" style="height:90px;width:120px;border-radius:5%" class="px-3 mx-2">
+        <div class="text px-5">
+          <p>Name</p>
+          <button class="menu__button">Login</button>
+        </div>
+      </li>
+      <li class="nav-item d-block d-md-none py-3 mx-4"><h4>Take Me To</h4></li>
+      <li class="nav-item py-md-2">
+        <a class="nav-link " href="./home.html"><img src="./images/iconHome.png"  class="d-none d-md-block"alt="" style="height:22px;width:22px;"> <p class="d-block d-md-none">Home</p><span class="sr-only">(current)</span>
+        </a>
+      </li>
+      <li class="nav-item py-md-2" data-toggle="collapse" data-target="#navbarNav">
+        <a class="nav-link" href="./Aboutus.html" ><p>About Us</p></a>
+      </li>
+      <li class="nav-item py-md-2">
+        <a class="nav-link" href="./services.html"><p>Services</p></a>
+      </li>
+         <li class="nav-item py-md-2">
+        <a class="nav-link" href="./news.html"><p>News</p></a>
+      </li>
+          <li class="nav-item py-md-2">
+        <a class="nav-link" href="./diyportal.html"><p>DIY Portal</p></a>
+      </li>
+          <li class="nav-item py-md-2">
+        <a class="nav-link" href="./education.html"><p>Education</p></a>
+      </li>
+      <li class="nav-item py-md-2">
+       <a class="nav-link" href="./blog.html"><p>Blogs</p></a>
+      </li>
+           <li class="nav-item py-md-2">
+       <a class="nav-link" href="./faq.html"><p>FAQ'S</p></a>
+      </li>
+           <li class="nav-item py-md-2">
+       <a class="nav-link" href="./contactus.html"><p>Contact Us</p></a>
+      </li>
+           <li class="nav-item py-md-2 d-none d-md-block">
+       <a class="nav-link" href="#"><button class="menu__button">Login</button></a>
+      </li>
+      <li class="nav-item d-flex d-block d-md-none">
+        <img src="" alt="" class="mt-5" style="height:120px; width:120px; border-radius:50%;background:black; ">
+        <div class="px-2">
+          <p>Performance</p>
+          <small>76%</small>
+          <p>Task Completed</p>
+          <small>5</small>
+          <p>Score</p>
+          <small>751</small>
+                  </div>
+      </li>
+    </ul>
+
+  </div>
+
+
+</div>
+  </div></div></div>
+</nav>
+  </div>
   <div class="container ">
     <img src="./images/newstop.png" alt="news"  class="img-fluid">
   </div>
@@ -459,6 +539,9 @@
     </div>
  
     </div>
+        <div class="footer container-fluid bg-light py-3">
+  <p class="text-center">©WeeW copyright 2020 </p>
+</div>
 </main>
 
 
